Final API methods tidied and tested, swagger documentation updated, and uninstalled unused swagger-ui package.
